--- a/vrexercises/03/index.html
+++ b/vrexercises/03/index.html
@@ -13,8 +13,8 @@
             <img id="forest" crossorigin="anonymous" src="../images/forest.jpg">
         </a-assets>
         <a-sky id="image-360" radius="15" src="#forest"></a-sky>
-        <a-plane position="0 -6 0" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
-        <a-entity obj-model="obj: #ant;" scale="3 3 3" position="-4 -2 -5" material="color: brown"></a-entity>
+        <a-plane position="0 -6 0" rotation="-90 0 0" width="4" height="4" color="red" shadow></a-plane>
+        <a-entity obj-model="obj: #ant;" scale="5 5 5" position="-4 -2 -5" material="color: brown"></a-entity>
     </a-scene>
 </body>
 
