updated cursor code for ex 04

--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
     <!-- .card -->
 
     <article class="card">
-      <a href="#">
+      <a href="vrexercises/05">
         <figure class="thumbnail">
-        <img src="http://placekitten.com/820/620" alt="meow">
+        <img src="images/05.jpg" alt="animation">
         </figure>
         <div class="card-content">
-          <h2>Duchess</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati recusandae expedita doloribus dicta cumque nostrum, autem eaque soluta atque voluptatem est et, laborum dignissimos error sequi non? Recusandae, aut alias.</p>
+          <h2>Exercise 05</h2>
+          <p>Review of rollovers and animations</p>
         </div>
         <!-- .card-content -->
       </a>
@@ -97,13 +97,13 @@
     <!-- .card -->
 
     <article class="card">
-      <a href="#">
+      <a href="vrexercises/06">
         <figure class="thumbnail">
-        <img src="http://placekitten.com/810/610" alt="meow">
+        <img src="images/06.jpg" alt="meow">
         </figure>
         <div class="card-content">
-          <h2>Puchies</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati recusandae expedita doloribus dicta cumque nostrum, autem eaque soluta atque voluptatem est et, laborum dignissimos error sequi non? Recusandae, aut alias.</p>
+          <h2>Exercise 06</h2>
+          <p>Environmental effects built into A-frame.</p>
         </div>
         <!-- .card-content -->
       </a>
